Prepare Life Console stage C recovery deployment
